--- a/scripts/pretrain/custom/byol.yaml
+++ b/scripts/pretrain/custom/byol.yaml
@@ -14,7 +14,7 @@ hydra:
   run:
     dir: .
 
-name: "byol-custom-dataset"
+name: "test-byol-dataset-clustervec-h5"
 method: "byol"
 backbone:
   name: "resnet18"
@@ -27,17 +27,18 @@ momentum:
   final_tau: 1.0
 data:
   dataset: "custom"
-  train_path: "PATH_TO_TRAIN_DIR"
-  val_path: "PATH_TO_VAL_DIR"  # remove this if there's no validation dir
-  format: "dali" # data format, supports "image_folder", "dali" or "h5"
-  num_workers: 4
+  num_classes: 151
+  train_path: "/scratch2/clear/larbez/Workspace/datasets/clustervec-small/subsets/H5train.h5"
+  val_path: "/scratch2/clear/larbez/Workspace/datasets/clustervec-small/subsets/H5test.h5"  # remove this if there's no validation dir
+  format: "h5" # data format, supports "image_folder", "dali" or "h5"
+  num_workers: 8
   # set this to True if the dataset is not stored as subfolders for each class
   # if no labels are provided, "h5" is not supported
   # convert a custom dataset by following `scripts/utils/convert_imgfolder_to_h5.py`
   no_labels: False
 optimizer:
   name: "lars"
-  batch_size: 64
+  batch_size: 256
   lr: 0.5
   classifier_lr: 0.1
   weight_decay: 1e-6
@@ -55,7 +56,7 @@ auto_resume:
   enabled: True
 
 # overwrite PL stuff
-max_epochs: 400
+max_epochs: 4000
 devices: [0, 1]
 sync_batchnorm: True
 accelerator: "gpu"
