--- a/scripts/pretrain/custom/byol.yaml
+++ b/scripts/pretrain/custom/byol.yaml
@@ -14,7 +14,7 @@ hydra:
   run:
     dir: .
 
-name: "test-byol-dataset-clustervec-h5"
+name: "byol-dataset-clustervec-150"
 method: "byol"
 backbone:
   name: "resnet18"
@@ -27,9 +27,9 @@ momentum:
   final_tau: 1.0
 data:
   dataset: "custom"
-  num_classes: 151
-  train_path: "/scratch2/clear/larbez/Workspace/datasets/clustervec-small/subsets/H5train.h5"
-  val_path: "/scratch2/clear/larbez/Workspace/datasets/clustervec-small/subsets/H5test.h5"  # remove this if there's no validation dir
+  num_classes: 150
+  train_path: "/model/resnet18-2020-150-solo/val.h5"
+  val_path: "/model/resnet18-2020-150-solo/test.h5"  # remove this if there's no validation dir
   format: "h5" # data format, supports "image_folder", "dali" or "h5"
   num_workers: 8
   # set this to True if the dataset is not stored as subfolders for each class
@@ -38,7 +38,7 @@ data:
   no_labels: False
 optimizer:
   name: "lars"
-  batch_size: 256
+  batch_size: 64
   lr: 0.5
   classifier_lr: 0.1
   weight_decay: 1e-6
@@ -57,7 +57,7 @@ auto_resume:
 
 # overwrite PL stuff
 max_epochs: 4000
-devices: [0, 1]
+devices: [0, 1, 2, 3]
 sync_batchnorm: True
 accelerator: "gpu"
 strategy: "ddp"
